<resources>
    <string name="app_name">EarthQuakes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="earthquakeurl">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.geojson</string>
    <string name="title_activity_details">Details</string>
    <string name="num_earthquakes">%d earthquakes processed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="earthquake_refresh">Earthquakes Refresh</string>
    <string name="earthquake_filters">Earthquakes Filters</string>
    <string name="feature_id">autorefresh</string>
    <string name="pref_auto_update">PREF_AUTO_UPDATE</string>
    <string name="pref_auto_interval">PREF_AUTO_INTERVAL</string>
    <string name="auto_update_promt">AUTOREFRESH</string>
    <string name="auto_updt_descr">Description</string>
    <string name="auto_update_interval">AUTO_UPDATE_INTERVAL</string>
    <string name="auto_update_interval_prompt">INTERVAL</string>
    <string name="min_magnitude">Min Magnitude</string>
    <string name="magnitude">MAGNITUDE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tab_list_title">Earquakes List</string>
    <string name="tab_map_title">Earquakes Map</string>
    <string name="action_refresh">refresh</string>


</resources>

